# hyperliquid-trading-firm

./: .env.example  .gitmodules  AGENTS.md  ANALYTICS.md  CLAUDE.md  DEVELOPMENT_PLAN-v1.md  DEVELOPMENT_PLAN.md  MEMORY_IMPLEMENTATION.md  RAG_IMPLEMENTATION.md  README.md  SPEC-v1.md  SPEC-v2.md  SPEC.md  STRATEGY.md  skills-lock.json  trading_program.md
.claude/plugins/: known_marketplaces.json
apps/agents/: README.md
apps/jobs/: recall_ablation_bridge.py
apps/research/: recall_competition_ingest.py  recall_strategy_translator.py
docs/: APP_INFRASTRUCTURE.md
multiclaw/agent0-evolution/: README.md
multiclaw/bankr/: IMPLEMENTATION_PLAN.md  README.md
multiclaw/core/: README.md
multiclaw/hyperliquid-claw/: CHANGELOG.md  Cargo.toml  HyperliquidClawVault.sol  IMPLEMENTATION_PLAN.md  LICENSE  README.md  analyze-coingecko.mjs  analyze_market.py  api.md  check-positions.mjs  ci.yml  client.rs  exchange.rs  foundry.toml  hyperliquid.mjs  install.ps1  install.sh  main.rs  mcp_server.rs  package.json  scan-market.mjs  server.rs  signals.py  signals.rs  signals_test.rs  utils.py
multiclaw/hyperliquid-claw/scripts/: build.js  setup.js
multiclaw/hyperliquid-claw/src/: index.js
multiclaw/intelliclaw/: .gitignore  README.md
multiclaw/metaclaw/: README.md  config.trading-firm.yaml  pyproject.toml
multiclaw/mlflow/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
multiclaw/openclaw-supermemory/: client.ts  openclaw.plugin.json
multiclaw/research-bridge/: README.md  config.trading-firm.yaml  (+1 more)
prompts/: Adaptive‑OPRO-meta-prompt.md
proto/: recall.proto
(+249 files in other folders)
