[package]
name = "hyperliquid-claw"
version = "3.0.0"
edition = "2021"
authors = ["HyperLiquid Claw Contributors"]
description = "AI-driven trading skill for Hyperliquid perpetual futures — Rust edition"
license = "MIT"
repository = "https://github.com/YourUsername/HyperLiquid-Claw"

[[bin]]
name = "hl-claw"
path = "src/bin/main.rs"

[[bin]]
name = "hl-mcp"
path = "src/bin/mcp_server.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum / EVM signing
ethers = { version = "2", features = ["rustls"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive", "color"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config / env
dotenvy = "0.15"

# Number formatting
rust_decimal = { version = "1", features = ["serde-with-str"] }

# MCP server (JSON-RPC stdio)
jsonrpc-core = "18"
jsonrpc-stdio-server = "18"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
